--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # REQUIRED CHANGES
 # Edit next line to provide your own name.
-title: Philip Johnson | Professional Portfolio
+title: Xiang Li | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://philipmjohnson.github.io"
+url: "https://xiangli.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: ""
 
